last version(i hope)

--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,9 @@
     <!-- footer-->
     <footer class="footer">
         <div class="container">
-            <a class="link logo-footer" href="index.html" lang="en">Web<span lang="en" class="logo-white">Studio</span></a>
+            <div class="footer-container">
+                <a class="link logo-footer" href="index.html" lang="en">Web<span lang="en"
+                        class="logo-white">Studio</span></a>
                 <address class="address address-footer">
                     <ul class="list address-footer-link">
                         <li class="address-footer-link-item">
@@ -164,39 +166,40 @@
                         </li>
                     </ul>
                 </address>
-        </div>
-        <div class="footer-social-icon">
-            <p class="footer-social-title">Присоединяйтесь</p>
-            <ul class="footer-social-icon list">
-                <li class="footer-social-icon-list">
-                    <a href="" class="footer-social-link">
-                        <svg class="f-social-icon" width="20x" height="20px">
-                            <use href="./images/sprite.svg#instagram"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-icon-list">
-                    <a href="" class="footer-social-link">
-                        <svg class="footer-social-list-icon" width="20x" height="20px">
-                            <use href="./images/sprite.svg#twitter"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-icon-list">
-                    <a href="" class="footer-social-link">
-                        <svg class="f-social-icon" width="20x" height="20px">
-                            <use href="./images/sprite.svg#facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-social-icon-list">
-                    <a href="" class="footer-social-link">
-                        <svg class="f-social-icon" width="20x" height="20px">
-                            <use href="./images/sprite.svg#linkedin"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
+            </div>
+            <div class="section-footer-social-icon">
+                <p class="footer-social-title">Присоединяйтесь</p>
+                <ul class="footer-social-icon list">
+                    <li class="footer-social-icon-list">
+                        <a href="" class="footer-social-link">
+                            <svg class="f-social-icon" width="20x" height="20px">
+                                <use href="./images/sprite.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-icon-list">
+                        <a href="" class="footer-social-link">
+                            <svg class="footer-social-list-icon" width="20x" height="20px">
+                                <use href="./images/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-icon-list">
+                        <a href="" class="footer-social-link">
+                            <svg class="f-social-icon" width="20x" height="20px">
+                                <use href="./images/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-icon-list">
+                        <a href="" class="footer-social-link">
+                            <svg class="f-social-icon" width="20x" height="20px">
+                                <use href="./images/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
