--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-container">
-                <a class="link logo-footer" href="index.html" lang="en">Web<span lang="en" class="logo-white">Studio</span></a>>
+                <a class="link logo-footer" href="index.html" lang="en">Web<span lang="en" class="logo-white">Studio</span></a>
                 <address class="address address-footer">
                     <ul class="list address-footer-link">
                         <li class="address-footer-link-item">
@@ -357,7 +357,7 @@
                     </ul>
                 </address>
             </div>
-            <div class="section=footer-social-icon">
+            <div class="section-footer-social-icon">
                 <p class="footer-social-title">Присоединяйтесь</p>
                 <ul class="footer-social-icon list">
                     <li class="footer-social-icon-list">
