--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             </nav>
             <ul class="list address-head-list">
                 <li class="address-list-head-item">
-                <a class="link contact-link mail-link" href="mailto:info@devstudio.com">
+                <a class="link contact-link tel-mail-link" href="mailto:info@devstudio.com">
                     <svg class="contact-icon" width="16" height="12">
                         <use href="./images/sprite.svg#mail"></use>
                     </svg>info@devstudio.com</a>
                 </li>
                 <li class="address-list-head-item">
-                <a class="link contact-link tel-link" href="tel:+380961111111">
+                <a class="link contact-link tel-mail-link" href="tel:+380961111111">
                     <svg class="contact-icon" width="10" height="16">
                         <use href="./images/sprite.svg#smartphone"></use>
                     </svg>+38 096 111 11 11</a>
@@ -349,10 +349,10 @@
                                 rel="noopener noreferrer">бул. Леси Украинки, 26, Киев, 02000</a>
                         </li>
                         <li class="address-footer-link-item">
-                            <a class="link footer-mail-link" href="mailto:info@example.com" lang="en">info@devstudio.com</a>
+                            <a class="link footer-tel-mail-link" href="mailto:info@example.com" lang="en">info@devstudio.com</a>
                         </li>
                         <li class="address-footer-link-item">
-                            <a class="link footer-tel-link" href="tel:+380991111111">+38 096 111 11 11</a>
+                            <a class="link footer-tel-mail-link" href="tel:+380991111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
                 </address>
