--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                 <h2 class="title">Чем мы занимаемся</h2>
                 <ul class="list we-do-list">
                     <li class="we-do-list-item">
-                        <image class="img-wht-we-do" src="./images/what-we-do/box-1.jpg" alt="програмист работает за компьютером" width="370" height="294">
+                        <img class="img-wht-we-do" src="./images/what-we-do/box-1.jpg" alt="програмист работает за компьютером" width="370" height="294">
                     </li>
                     <li class="we-do-list-item">
-                        <image class="img-wht-we-do" src="./images/what-we-do/box-2.jpg" alt="веб дизайнер разрабатывает приложение для смартфона" width="370"
+                        <img class="img-wht-we-do" src="./images/what-we-do/box-2.jpg" alt="веб дизайнер разрабатывает приложение для смартфона" width="370"
                             height="294">
                     </li>
                     <li class="we-do-list-item">
-                        <image class="img-wht-we-do" src="./images/what-we-do/box-3.jpg" alt="креативный дизайнер с работающим планшетом для выбора цвета"
+                        <img class="img-wht-we-do" src="./images/what-we-do/box-3.jpg" alt="креативный дизайнер с работающим планшетом для выбора цвета"
                             width="370" height="294">
                     </li>
                 </ul>
@@ -133,7 +133,7 @@
                 <h2 class="title">Наша команда</h2>
                 <ul class="list our-team-list">
                     <li class="our-team-list-item">
-                        <image class="our-team-img" src="./images/our-team/igor.jpg" alt="мужчина в очках и с бородой в бордовой рубашке" width="270"
+                        <img class="our-team-img" src="./images/our-team/igor.jpg" alt="мужчина в очках и с бородой в бордовой рубашке" width="270"
                             height="260">
                             <div class="our-team-card-format">
                                 <h3 class="our-team-name">Игорь Демьяненко</h3>
@@ -171,7 +171,7 @@
                             </div>
                             </li>
                     <li class="our-team-list-item">
-                        <image class="our-team-img" src="./images/our-team/Olga.jpg" alt="Блондинка в очках и деловом костюме" width="270" height="260">
+                        <img class="our-team-img" src="./images/our-team/Olga.jpg" alt="Блондинка в очках и деловом костюме" width="270" height="260">
                             <div class="our-team-card-format">
                                 <h3 class="our-team-name">Ольга Репина</h3>
                                 <p class="our-team-duty" lang="en">Frontend Developer</p>
@@ -208,7 +208,7 @@
                             </div>
                     </li>
                     <li class="our-team-list-item">
-                        <image class="our-team-img" src="./images/our-team/Nikolay.jpg" alt="мужчина в голубой рубашке и со щентиноу"
+                        <img class="our-team-img" src="./images/our-team/Nikolay.jpg" alt="мужчина в голубой рубашке и со щентиноу"
                             width="270" height="260">
                             <div class="our-team-card-format">
                                 <h3 class="our-team-name">Николай Тарасов</h3>
@@ -246,7 +246,7 @@
                             </div>
                     </li>
                     <li class="our-team-list-item">
-                        <image class="our-team-img" src="./images/our-team/Michael.jpg" alt="мужчина в черной футболке с бородой и очками"
+                        <img class="our-team-img" src="./images/our-team/Michael.jpg" alt="мужчина в черной футболке с бородой и очками"
                             width="270" height="260">
                             <div class="our-team-card-format">
                                 <h3 class="our-team-name">Михаил Ермаков</h3>
